Fix cut off icons

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ svg.socials-icon {
 	padding: 1vh;
 	width: 1.5rem;
 	height: 1.5rem;
+	overflow: visible;
 }
 
 h1.name {
